--- a/A2/CART498_GENAI_A02.ipynb
+++ b/A2/CART498_GENAI_A02.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNxrXVyDvbWmUJXiA6CFeq0"
+      "authorship_tag": "ABX9TyPKdMLswAXHGRPC8ay424Vf",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,14 +17,24 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/noakishere/cart498-genai/blob/main/A2/CART498_GENAI_A02.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "S61CaCju7Gez",
-        "outputId": "ee05e337-37ba-4ffb-b9c5-d4ae27986d36"
+        "outputId": "2d6e12db-2c3e-44e1-d9d6-fefc99d6cdf8"
       },
       "outputs": [
         {
@@ -31,7 +42,7 @@
           "name": "stdout",
           "text": [
             "Requirement already satisfied: transformers in /usr/local/lib/python3.11/dist-packages (4.47.1)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.11/dist-packages (from transformers) (3.16.1)\n",
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.11/dist-packages (from transformers) (3.17.0)\n",
             "Requirement already satisfied: huggingface-hub<1.0,>=0.24.0 in /usr/local/lib/python3.11/dist-packages (from transformers) (0.27.1)\n",
             "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.11/dist-packages (from transformers) (1.26.4)\n",
             "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.11/dist-packages (from transformers) (24.2)\n",
@@ -76,6 +87,9 @@
         "tokenizer = AutoTokenizer.from_pretrained(\"openai-community/gpt2\")\n",
         "model = AutoModelForCausalLM.from_pretrained(\"openai-community/gpt2\")\n",
         "\n",
+        "top_k = 20\n",
+        "chosenKIndex = 15 # p + x\n",
+        "\n",
         "# Define the prompt\n",
         "lines = [\"One must have a mind of\",\n",
         "         \"To regard the frost and the\",\n",
@@ -94,8 +108,6 @@
         "         \"Nothing that is not there and the nothing that\"]\n",
         "\n",
         "for line in lines:\n",
-        "  # print(\"---\")\n",
-        "  # print(f\"current line: {line}\")\n",
         "  prompt = line\n",
         "\n",
         "  # Tokenize the prompt and convert it to input IDs\n",
@@ -113,21 +125,15 @@
         "  # Convert logits to probabilities using softmax\n",
         "  probabilities = torch.softmax(processed_logits, dim=-1).squeeze()\n",
         "\n",
-        "  # Get the top 10 most probable tokens and their probabilities\n",
-        "  top_k = 20\n",
         "  top_probs, top_indices = torch.topk(probabilities, top_k)\n",
         "\n",
         "  # Decode the tokens and pair them with their probabilities\n",
         "  continuations = [token.replace(\"Ġ\", \"\") for token in tokenizer.convert_ids_to_tokens(top_indices.tolist())]\n",
         "  results = list(zip(continuations, top_probs.tolist()))\n",
         "\n",
-        "  # print(f\"{line} + {enumeration[7]}\")\n",
         "  # Display the results\n",
-        "  # print(\"Top 10 most probable continuation words:\")\n",
         "  for i, (word, prob) in enumerate(results, 1):\n",
-        "      # print(word)\n",
-        "      # print(f\"{i}: {word} (Probability: {prob * 100:.2f}%)\")\n",
-        "      if(i == 15):\n",
+        "      if(i == chosenKIndex):\n",
         "        print(f\"{line} {word}\")\n"
       ]
     }
