--- a/A2/CART498_GENAI_A02.ipynb
+++ b/A2/CART498_GENAI_A02.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKdMLswAXHGRPC8ay424Vf",
+      "authorship_tag": "ABX9TyP7zzTtK32ehixBTQBMgZT+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,14 +27,59 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "The following algorithm uses **GPT2** to generate text predictability.\n",
+        "\n",
+        "This predictability is used to create newer poems based on word replacement with X highest ranked predictability.\n",
+        "\n",
+        "**Original Poem:**\n",
+        "The Snow Man\n",
+        "by Wallace Stevens (1879-1955)\n",
+        "\n",
+        "One must have a mind of winter\n",
+        "\n",
+        "To regard the frost and the boughs\n",
+        "\n",
+        "Of the pine-trees crusted with snow;\n",
+        "\n",
+        "And have been cold a long time\n",
+        "\n",
+        "To behold the junipers shagged with ice,\n",
+        "\n",
+        "The spruces rough in the distant glitter\n",
+        "\n",
+        "Of the January sun; and not to think\n",
+        "\n",
+        "Of any misery in the sound of the wind,\n",
+        "\n",
+        "In the sound of a few leaves,\n",
+        "\n",
+        "Which is the sound of the land\n",
+        "\n",
+        "Full of the same wind\n",
+        "\n",
+        "That is blowing in the same bare place\n",
+        "\n",
+        "For the listener, who listens in the snow,\n",
+        "\n",
+        "And, nothing himself, beholds\n",
+        "\n",
+        "Nothing that is not there and the nothing that is."
+      ],
+      "metadata": {
+        "id": "YWnfKh1i28Ed"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "S61CaCju7Gez",
-        "outputId": "2d6e12db-2c3e-44e1-d9d6-fefc99d6cdf8"
+        "outputId": "67eb818f-1f8d-4488-d65d-44e1dbd7c35d"
       },
       "outputs": [
         {
@@ -58,21 +103,21 @@
             "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from requests->transformers) (3.10)\n",
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests->transformers) (2.3.0)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests->transformers) (2024.12.14)\n",
-            "One must have a mind of it\n",
-            "To regard the frost and the lack\n",
-            "Of the pine-trees crusted with dust\n",
-            "And have been cold a long time so\n",
-            "To behold the junipers shagged with silver\n",
-            "The spruces rough in the distant corners\n",
-            "Of the January sun; and not to make\n",
-            "Of any misery in the sound of the door\n",
-            "In the sound of a few taps\n",
-            "Which is the sound of the man\n",
-            "Full of the same Ċ\n",
-            "That is blowing in the same bare face\n",
-            "For the listener, who listens in the form\n",
-            "And, nothing himself, however\n",
-            "Nothing that is not there and the nothing that doesn\n"
+            "One must have a mind of your\n",
+            "To regard the frost and the ice\n",
+            "Of the pine-trees crusted with salt\n",
+            "And have been cold a long time now\n",
+            "To behold the junipers shagged with blood\n",
+            "The spruces rough in the distant ,\n",
+            "Of the January sun; and not to say\n",
+            "Of any misery in the sound of the world\n",
+            "In the sound of a few gunshots\n",
+            "Which is the sound of the engine\n",
+            "Full of the same name\n",
+            "That is blowing in the same bare chest\n",
+            "For the listener, who listens in the first\n",
+            "And, nothing himself, no\n",
+            "Nothing that is not there and the nothing that was\n"
           ]
         }
       ],
@@ -88,7 +133,7 @@
         "model = AutoModelForCausalLM.from_pretrained(\"openai-community/gpt2\")\n",
         "\n",
         "top_k = 20\n",
-        "chosenKIndex = 15 # p + x\n",
+        "chosenKIndex = 4 # p + x\n",
         "\n",
         "# Define the prompt\n",
         "lines = [\"One must have a mind of\",\n",
